# rewind

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  MULTIPLAYER_PLAN.md  Makefile.toml  README.md  Readme.md  Vagrantfile  build.sbt  dev-env  docker-compose.yml  flake.nix  flyway.conf  sample.env  shell.nix
.github/workflows/: build-server.yml
backend/: .gitignore  Cargo.toml  Makefile  dev-env
backend/migrations/: V1__initial_schema.sql
backend/ops/: deploy-prod.yml
backend/ops/group_vars/: all.yml  prod.yml
backend/ops/roles/app/tasks/: main.yml
backend/ops/roles/app/templates/: application.conf.j2  logback.xml.j2  migrate_db.j2
backend/ops/roles/env/tasks/: main.yml
backend/ops/roles/env/templates/: vhost.j2
backend/ops/secrets/: local.yml  shared.yml
backend/src/: cli.rs  conf.rs  db.rs  error.rs  errors.rs  lib.rs  main.rs  models.rs
backend/src/game/: messages.rs  mod.rs  race.rs  server.rs  session.rs
backend/src/main/resources/: secrets.conf
backend/src/main/scala/rewind/: Conf.scala
backend/src/main/scala/rewind/services/: GribService.scala
backend/src/main/scala/rewind/stores/: GribStore.scala  PolarStore.scala
backend/src/repos/: wind_reports.rs
backend/src/stores/: wind_reports.rs
backend/src/tools/: grib.rs  mod.rs
client/: .gitignore  Cargo.toml  config.ts  dev-env  elm-tooling.json  elm.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.js
client/public/static/: imoca-classic.json  imoca-foil.csv  imoca-foil.json  mini-650.json
client/src/: App.tsx  Controls.tsx  ElmApp.ts  Map.ts  Map.tsx  State.ts  catmull-rom.ts  config.ts  deck.d.ts  elm.d.ts  globe.ts  icons.tsx  index.html  index.ts  index.tsx  interpolated-wind.ts  lib.rs  models.ts  pngWind.ts  replay-path.ts  styles.css  useAnimationFrame.ts  utils.test.ts  utils.ts  vite-env.d.ts  wind-raster.ts  wind-raster.worker.ts  wind.ts  wkbWind.ts
client/src/app/: App.ts  App.tsx  AuthModal.tsx  CourseEditor.tsx  CursorWind.tsx  EmailVerification.tsx  FinishOverlay.tsx  HallOfFameList.tsx  Hud.tsx  KeyBindings.tsx  Leaderboard.tsx  LobbyScreen.tsx  Main.elm  Map.elm  Model.elm  MultiplayerMenu.tsx  PolarDiagram.tsx  Ports.elm  ProfileManager.tsx  ProfileSwitcher.tsx  RaceChoiceScreen.tsx  RaceScreen.tsx  RaceTimer.tsx  StartRaceButton.tsx  StartScreen.tsx  account.ts  auth.ts  courses.ts  exclusion-zone.ts  gate-crossing.ts  ghost-leaderboard.ts  index.ts  land.ts  nickname.ts  player-id.ts  polar.test.ts  polar.ts  projected-path.ts  race-context.ts  state.test.ts  (+9 more)
client/src/app/admin/: AccountsTab.tsx  AdminPanel.tsx  RaceResultsTab.tsx  ResultTraceMap.tsx  api.ts
client/src/app/course-editor/: CourseEditorPage.tsx  CourseMetadataForm.tsx  EditorToolbar.tsx  ExclusionZonesEditor.tsx  GateEditor.tsx  GatesListEditor.tsx  LngLatInput.tsx  Section.tsx  StartEditor.tsx  WaypointsEditor.tsx  placement.ts
client/src/app/editor/: CourseForm.tsx  EditorMap.tsx  ExclusionZonePolygon.tsx  GateMarker.tsx  WaypointPolyline.tsx  api.ts
client/src/app/hooks/: index.ts  useCourses.ts  useGameLoop.ts  useGhosts.ts  useIdleWind.ts  useKeyboardControls.ts  useMultiplayer.ts  useRaceDataLoader.ts  useSessionRefs.ts  useSphereView.ts  useWindLoader.ts
client/src/app/lobby/: AvailableLobbies.tsx  PlayerList.tsx  index.ts
client/src/app/polars/: imoca-foil.json
client/src/app/race/: AvailableRaces.tsx  CountdownDisplay.tsx  PlayerList.tsx  PlayerNameInput.tsx  index.ts
client/src/map/: index.tsx
client/src/map-worker/: deps.js  index.js
client/src/multiplayer/: client.ts  index.ts  signaling.ts  types.ts  webrtc-manager.ts
client/src/sphere/: boat-geometry.ts  boat.ts  course-line.ts  exclusion-zone.ts  ghost-boats.ts  index.ts  land.ts  ne_50m_extra_light@1.json  offscreen-indicators.ts  particles.ts  projected-path.ts  scene.ts  shaders.ts  stars.ts  texture.ts  versor.ts  wake.ts  wind-particles.ts  wind-texture.ts  wind-texture.worker.ts
client/src/static/: VR-IMOCA Full Pack.csv  vr-imoca-full-pack.json
config/: setup-db.sql
frontend/: .gitignore  elm.json  package-lock.json  package.json  rollup.config.js  tailwind.config.js
frontend/src/: App.elm  Main.elm  index.html  index.js
gis/: .env-sample  Cargo.toml
gis/migrations/: V1__initial_schema.sql
gis/src/: conf.rs  db.rs  lib.rs  main.rs  models.rs
gis/src/environment/: mod.rs
gis/src/game/: mod.rs  msg.rs  race.rs  session.rs
gis/src/models/: mod.rs
infra/: backend.tf  ecs.tf  flyio.tf  frontend.tf  gribs.tf  main.tf  versions.tf
old-backend/: container.nix  dev-env
old-backend/ops/group_vars/: local.yml
ops/: deploy-local.yml  hosts.yml  setup-dev.yml
ops/group_vars/: all.yml  prod.yml
ops/roles/app/defaults/: main.yml
ops/roles/app/tasks/: main.yml
ops/roles/app/templates/: application.conf.j2  deploy.j2  (+3 more)
ops/secrets/: local.yml  prod.yml  shared.yml
project/: plugins.sbt
server/: .gitignore  Cargo.toml  Dockerfile  Makefile  container.nix  dev-env  fly.toml  rewind.service
server/migrations/: 20250203_001_initial.sql  20250204_001_accounts.sql  20250207_001_course_position.sql  20250301_001_fix_results_unique.sql  V1__initial_schema.sql  V2__add_tilebbox_function.sql  V2__wind_tiles_function.sql  V3__add_wind_reports_day_hour_forecast_index.sql  V3__create_index_wind_points.sql  V4__remove_wind_rasters.sql
server/scripts/: import-osm.sh  vlm-vg20.sh
server/src/: auth.rs  cli.rs  config.rs  courses.json  courses.rs  db.rs  email.rs  grib_png.rs  grib_store.rs  grib_stream.rs  main.rs  manifest.rs  messages.rs  models.rs  multiplayer.rs  ncar_source.rs  players.rs  profiles.rs  race_results.rs  retry.rs  s3.rs  s3_multipart.rs  server.rs  session.rs  wind_reports.rs
server/src/game/: messages.rs  mod.rs  session.rs
server/src/repos/: courses.rs  mod.rs  wind_points.rs  wind_rasters.rs  wind_reports.rs
server/src/tools/: grib.rs
shared/: Cargo.toml
shared/src/: courses.rs  lib.rs  messages.rs  models.rs
src/main/resources/: .gitattributes  application.conf  logback.xml  secrets.conf
(+17 files in other folders)
