[package]
name = "rewind"
version = "0.1.0"
authors = ["Emilien Taque <etaque@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
clap = "2.33.3" # 3.0.0 compiling fails
structopt = "0.3.21"
futures = "0.3.1"
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
log = "0.4"
env_logger = "0.7"
reqwest = { version = "0.10", features = ["rustls-tls"], default-features = false }
tempfile = "3"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
derive_more = "0.99.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.34"
refinery = { version = "0.4.0", features = ["tokio-postgres"]}
tokio-postgres = { version = "0.5", features = ["runtime", "with-chrono-0_4", "with-uuid-0_8" ] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
bb8 = "0.5"
bb8-postgres = "0.5"
postgis = "0.7"
postgres-types = { version = "0.1.3", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
bytes = "0.5"
geo = "0.16"
