[package]
name = "client"
version = "0.1.0"
authors = ["Emilien Taque <etaque@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
serde = "1.0"
serde_json = "1.0"
rmp-serde = "0.14"
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../shared"}

# [profile.release]
# lto = true
# opt-level = 'z'
# codegen-units = 1

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-Os']
