[package]
name = "client"
version = "0.1.0"
authors = ["Emilien Taque <etaque@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
shared = { path = "../shared"}
seed = "0.8.0"
wasm-bindgen = "0.2"
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.1.3"
rmp-serde = "0.14"
chrono = { version = "0.4", features = ["serde"] }
web-sys = { version = "0.3.6", features = [ 'Document', 'Element', 'HtmlElement', 'Node', 'Window' ] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
