[package]
name = "rewind"
version = "0.1.0"
authors = ["Emilien Taque <etaque@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"
warp = { version = "0.2", features = ["tls"] }
reqwest = { version = "0.10", features = ["rustls-tls"], default-features = false }
tempfile = "3"
log = "0.4"
serde_derive = "1.0"
serde = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# structopt = "0.1.3"
clap = "2.33.3" # 3.0.0 compiling fails
anyhow = "1.0.34"
refinery = { version = "0.4.0", features = ["postgres"]}
geo-types = "0.6"
tokio-postgres = { version = "0.5", features = ["runtime", "with-chrono-0_4", "with-geo-types-0_6", "with-uuid-0_8" ] }
bb8 = "0.5"
bb8-postgres = "0.5"
# postgis = "0.7.0"
