[package]

name = "rewind"
version = "0.1.0"
authors = ["Emilien Taque <etaque@gmail.com>"]
edition = "2018"

[dependencies]

# Runtime
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.1"
warp = "0.2.5"
log = "0.4"
env_logger = "0.7"
dotenv = "0.15"

# DB
tokio-postgres = { version = "0.5", features = ["runtime", "with-chrono-0_4", "with-uuid-0_8" ] }
bb8 = "0.5"
bb8-postgres = "0.5"
refinery = { version = "0.4.0", features = ["tokio-postgres"]}
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
postgis = "0.7"
postgres-types = { version = "0.1.3", features = ["derive"] }
postgres_array = "0.10.0"

# CLI
structopt = "0.3.21"
dialoguer = "0.7"

# GRIB
reqwest = { version = "0.10", features = ["rustls-tls"], default-features = false }
tempfile = "3"
bytes = "0.5"
contour = "0.3.0"

# Utils
anyhow = "1.0.34"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_postgres = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

