[package]
name = "rewind"
version = "0.1.0"
authors = ["Emilien Taque <etaque@gmail.com>"]
edition = "2021"

[dependencies]

# Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = { version = "0.3", features = ["websocket", "compression"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"

# DB
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
bb8 = "0.8"
bb8-postgres = "0.8"
refinery = { version = "0.8", features = ["tokio-postgres"] }
postgis = "0.9"
postgres-types = { version = "0.2", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"

# GRIB
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tempfile = "3"
bytes = "1"
contour = "0.13"
object_store = { version = "0.13.0", features = ["aws"] }

# Utils
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
envy = "0.4"
once_cell = "1"
