[package]
name = "rewind"
version = "0.1.0"
authors = ["Emilien Taque <etaque@gmail.com>"]
edition = "2024"

[dependencies]

# Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"

# GRIB & Raster processing
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
bytes = "1"
object_store = { version = "0.13.0", features = ["aws"] }
grib = "0.7"
png = "0.17"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utils
anyhow = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
once_cell = "1"
